--- a/_includes/blog-posts.html
+++ b/_includes/blog-posts.html
@@ -1,16 +1,16 @@
 ---
-layout: post
+layout: default
 ---
 
-{% include nav.html %} 
+{% include nav.html %}
 
 <section id="blog">
-    <div class="container">  
+    <div class="container">
         <div class="row">
-            <div class="col-12 col-md-10 mx-auto">             
-                  
-                     
-             {% for post in site.posts %}
+            <div class="col-12 col-md-10 mx-auto">
+
+
+                {% for post in site.posts %}
                 <!-- Blog Post -->
                 <h2>
                     <a href="{{ post.url }}">{{ post.title }}</a>
@@ -24,16 +24,13 @@ layout: post
                 <hr>
                 {% endif %}
                 {{ post.excerpt }}
-                <a class="btn btn-primary" href="{{ post.url }}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="{{ post.url }}">Read More <span
+                        class="glyphicon glyphicon-chevron-right"></span></a>
 
-                <hr>                                            
-            {% endfor %}                           
-                                                                
+                <hr>
+                {% endfor %}
+
             </div>
-        </div>       
+        </div>
     </div>
 </section>
-       
-       
-                   
-        
