--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,99 +1,33 @@
 ---
-layout: default
+layout: post
 ---
 
 {% include nav.html %}
 
-{{ content }}
-
-<!-- POST HTML -->
-<article id="post">
-    <div class="container">
+<section class="section pt-4">
+    <div class="container text-center video-container">
+        <!--<h1 class="aqua">Still</h1>
+      <h1 class="white">Waves</h1>
+      -->
 
         <div class="row">
-
-            <!-- Blog Post Content Column -->
-            <div class="col-lg-10">
-
-                <!-- Blog Post -->
-
-                <!-- Title -->
-                <h1>{{ page.title }}</h1>
-
-                <!-- Author -->
-                <p class="lead">
-                    by {{ page.author }}
-                </p>
-
-                <hr>
-
-                <!-- Date/Time -->
-                <p><span class="glyphicon glyphicon-time"></span> Posted on {{ page.date | date: "%B %d, %Y"}}</p>
-
-                <hr>
-
-                <!-- Preview Image -->
-                {% if page.image %}
-                <img class="img-responsive" src="{{ page.image }}" alt="{{ page.image }}">
-                {% endif %}
-
-
-                <hr>
-
-                <!-- Post Content -->
-                {% if page.lead %}
-                <p class="lead">{{ page.lead }}</p>
-                {% endif %}
-
-                {{ page.content }}
-
-
-                <hr>
-                {% if site.comments %}
-                {% include comments.html %}
-                {% endif %}
-
-                {% if page.previous %}
-                <span class="previous-link">
-                    <a rel="prev" href="{{ page.previous.url }}">Previous article</a>
-                </span>
-                {% endif %}
-
-                {% if page.next %}
-                <span class="next-link pull-right">
-                    <a rel="next" href="{{ page.next.url }}">Next article</a>
-                </span>
-                {% endif %}
-
-                <hr>
+            <div class="col-md-8 mx-auto text-center">
+                <p class="display-4">Regressing Times Video</p>
             </div>
-
-            <!-- Blog Sidebar Widgets Column -->
-            <div class="col-md-4">
-
-                <!-- Blog Categories Well -->
-                <div class="well">
-                    {% for category_name in page.categories limit:1 %}
-                    <h4>{{ category_name | capitalize }}</h4>
-
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <ul class="list-unstyled">
-                                {% for post in site.categories[category_name] limit:5 %}
-                                <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
-                    {% endfor %}
-
-                    <!-- /.row -->
-                </div>
-
-
-            </div>
-
         </div>
-        <!-- /.row -->
+
+        <!-- Title -->
+        <h1>{{ page.title }}</h1>
+
+        <!-- Author -->
+        <p class="lead">
+            by {{ page.author }}
+        </p>
+
+
+        {{ content }}
+
+
+
     </div>
-</article>
+</section>
